--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="navigation">
                         <div class="navbar-header">
                             <div class="navbar-brand">
-                                <a href="/">
+                                <a href="/RWD_OfficialPage/">
                                     <h1 style="margin-left: 24px">TECH</h1>
                                 </a>
                             </div>
